Squashed commit of the following:
commit 8ef93fcd0a52f37d0e3065db02c9e059532fe7d9
Author: Aaron Patterson <tenderlove@ruby-lang.org>
Date:   Tue Aug 8 14:10:36 2023 -0700

    fix constant names

commit 62f1f0b8ecb12e41f410ca35f05c686a93d88bf7
Author: Aaron Patterson <tenderlove@ruby-lang.org>
Date:   Tue Aug 8 14:09:25 2023 -0700

    fix requires

commit 67ff997a3d7efa03bb5328116fc8260240ee09d5
Author: Aaron Patterson <tenderlove@ruby-lang.org>
Date:   Tue Aug 8 14:07:19 2023 -0700

    renaming files

--- a/lib/tinygql/nodes.rb.erb
+++ b/lib/tinygql/nodes.rb.erb
@@ -1,6 +1,6 @@
-require "tinyg/node"
+require "tinygql/node"
 
-module TinyG
+module TinyGQL
   module Nodes
     class Node
       include Enumerable
